--- a/pom.xml
+++ b/pom.xml
@@ -12,39 +12,39 @@
     <packaging>pom</packaging>
 
     <modules>
-        <module>socialnetwork-common</module>
-        <module>socialnetwork-api</module>
-        <module>socialnetwork-core</module>
-        <module>socialnetwork-model</module>
+<!--        <module>socialnetwork-common</module>-->
+<!--        <module>socialnetwork-api</module>-->
+<!--        <module>socialnetwork-core</module>-->
+<!--        <module>socialnetwork-model</module>-->
+        <module>socialnetwork-auth-service</module>
+        <module>socialnetwork-profile-service</module>
+        <module>socialnetwork-admin-service</module>
+        <module>socialnetwork-api-gateway</module>
+        <module>socialnetwork-service-discovery</module>
     </modules>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.1.3.RELEASE</version>
+		<version>2.2.5.RELEASE</version>
 	</parent>
 
     <properties>
-        <java.version>11</java.version>
+        <java.version>14</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-war-plugin</artifactId>
+                <configuration>
+                    <failOnMissingWebXml>false</failOnMissingWebXml>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
     <dependencies>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-security</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.postgresql</groupId>
-            <artifactId>postgresql</artifactId>
-        </dependency>
 
     </dependencies>
 
