--- a/socialnetwork-service-discovery/pom.xml
+++ b/socialnetwork-service-discovery/pom.xml
@@ -19,15 +19,17 @@
 
     <properties>
         <java.version>14</java.version>
+        <maven.compiler.source>14</maven.compiler.source>
+        <maven.compiler.target>14</maven.compiler.target>
+        <spring.boot.version>2.3.3.RELEASE</spring.boot.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <spring.cloud.netflix.eureka.server.version>2.2.5.RELEASE</spring.cloud.netflix.eureka.server.version>
     </properties>
 
     <dependencies>
         <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
-            <version>${spring.cloud.netflix.eureka.server.version}</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+            <version>${spring.boot.version}</version>
         </dependency>
     </dependencies>
 
