--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <java.version>14</java.version>
         <spring.boot.web.version>2.3.3.RELEASE</spring.boot.web.version>
         <spring.cloud.netflix.eureka.server.version>2.2.5.RELEASE</spring.cloud.netflix.eureka.server.version>
+        <google.gson.version>2.8.6</google.gson.version>
         <maven.compiler.source>14</maven.compiler.source>
         <maven.compiler.target>14</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -38,6 +39,11 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
             <version>${spring.cloud.netflix.eureka.server.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>${google.gson.version}</version>
         </dependency>
     </dependencies>
 
