--- a/socialnetwork-api-gateway/src/main/resources/application.properties
+++ b/socialnetwork-api-gateway/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 spring.application.name=api-gateway
+
+server.port = 8762
+
+eureka.client.serviceUrl.defaultZone = http://localhost:8761/eureka
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=true
+
+zuul.routes.authservice.path=/auth-service/**
+zuul.routes.authservice.service-id=auth-service
+
+zuul.routes.adminservice.path=/admin-service/**
+zuul.routes.adminservice.service-id=admin-service
+
+zuul.routes.profileservice.path=/profile-service/**
+zuul.routes.profileservice.service-id=profile-service
