--- a/socialnetwork-auth-service/src/main/resources/application.properties
+++ b/socialnetwork-auth-service/src/main/resources/application.properties
@@ -2,4 +2,7 @@ spring.application.name=auth-service
 
 server.port=8080
 
+security.jwt.token.secret-key = sn_socialnetwork
+security.jwt.token.expire-length = 3600000
+
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
