--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>socialnetwork-admin-service</module>
         <module>socialnetwork-api-gateway</module>
         <module>socialnetwork-service-discovery</module>
+        <module>socialnetwork-user-service</module>
     </modules>
 
     <properties>
