Added Spring Cloud OpenFeign, UserProxyService, User, UserDetails and Role models, application constants for auth service. Refactored Jwt provider and authentication rest controller. Added route for user service

--- a/socialnetwork-api-gateway/src/main/resources/application.properties
+++ b/socialnetwork-api-gateway/src/main/resources/application.properties
@@ -14,3 +14,6 @@ zuul.routes.adminservice.service-id=admin-service
 
 zuul.routes.profileservice.path=/profile-service/**
 zuul.routes.profileservice.service-id=profile-service
+
+zuul.routes.userservice.path=/user-service/**
+zuul.routes.userservice.service-id=user-service
