--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,8 @@
     <properties>
         <java.version>14</java.version>
         <spring.boot.web.version>2.3.3.RELEASE</spring.boot.web.version>
+        <spring.boot.security>2.3.3.RELEASE</spring.boot.security>
+        <spring.boot.data.jpa.version>2.3.3.RELEASE</spring.boot.data.jpa.version>
         <spring.cloud.netflix.eureka.server.version>2.2.5.RELEASE</spring.cloud.netflix.eureka.server.version>
         <spring.cloud.openfeign.version>2.2.5.RELEASE</spring.cloud.openfeign.version>
         <google.gson.version>2.8.6</google.gson.version>
@@ -36,6 +38,16 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
             <version>${spring.boot.web.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+            <version>${spring.boot.security}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+            <version>${spring.boot.data.jpa.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
