Refactoring auth-service and user-service

--- a/socialnetwork-api/src/main/resources/application.properties
+++ b/socialnetwork-api/src/main/resources/application.properties
@@ -5,6 +5,7 @@ security.jwt.token.expire-length = 3600000
 
 # PostgreSQL Configuration
 
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/sn_database
 spring.datasource.username = sn_user
 spring.datasource.password = sn_password
