--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
         <spring.boot.data.jpa.version>2.3.3.RELEASE</spring.boot.data.jpa.version>
         <spring.cloud.netflix.eureka.server.version>2.2.5.RELEASE</spring.cloud.netflix.eureka.server.version>
         <spring.cloud.openfeign.version>2.2.5.RELEASE</spring.cloud.openfeign.version>
+        <postgresql.version>42.2.16</postgresql.version>
         <google.gson.version>2.8.6</google.gson.version>
         <maven.compiler.source>14</maven.compiler.source>
         <maven.compiler.target>14</maven.compiler.target>
@@ -63,6 +64,11 @@
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>${google.gson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>${postgresql.version}</version>
         </dependency>
     </dependencies>
 
