--- a/socialnetwork-auth-service/src/main/resources/application.properties
+++ b/socialnetwork-auth-service/src/main/resources/application.properties
@@ -2,7 +2,15 @@ spring.application.name=auth-service
 
 server.port=8080
 
+# Jwt Configuration
+
 security.jwt.token.secret-key = sn_socialnetwork
 security.jwt.token.expire-length = 3600000
+
+# PostgreSQL Configuration
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/sn_database
+spring.datasource.username = sn_user
+spring.datasource.password = sn_password
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
