Added query to repository, configuration for database and changed URL in UserRestController in user service. Refactored UserServiceProxy

--- a/socialnetwork-user-service/src/main/resources/application.properties
+++ b/socialnetwork-user-service/src/main/resources/application.properties
@@ -2,4 +2,10 @@ spring.application.name=user-service
 
 server.port=8084
 
+# PostgreSQL Configuration
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/sn_database
+spring.datasource.username = sn_user
+spring.datasource.password = sn_password
+
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
