Refactored application's properties and pom's.xml

--- a/socialnetwork-api-gateway/src/main/resources/application.properties
+++ b/socialnetwork-api-gateway/src/main/resources/application.properties
@@ -17,3 +17,6 @@ zuul.routes.profileservice.service-id=profile-service
 
 zuul.routes.userservice.path=/user-service/**
 zuul.routes.userservice.service-id=user-service
+
+zuul.routes.groupservice.path=/group-service/**
+zuul.routes.groupservice.service-id=group-service
