--- a/socialnetwork-profile-service/src/main/resources/application.properties
+++ b/socialnetwork-profile-service/src/main/resources/application.properties
@@ -2,21 +2,21 @@ spring.application.name=profile-service
 
 server.port=8081
 
-# PostgreSQL Configuration
-
-spring.datasource.url=jdbc:postgresql://localhost:5432/sn_database
-spring.datasource.username=sn_user
-spring.datasource.password=sn_password
-
-# Spring Eureka Configuration
-
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
-
-# Hibernate/JPA Configuration
+# Hibernate Configuration
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
+
+# PostgreSQL Configuration
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/sn_profile_service_db
+spring.datasource.username=sn_profile_service_user
+spring.datasource.password=sn_profile_service_password
+
+# Spring Eureka Configuration
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 
 # Multipart File Size
 
