Refactored application.properties in config server

--- a/socialnetwork-config-server/src/main/resources/application.properties
+++ b/socialnetwork-config-server/src/main/resources/application.properties
@@ -2,5 +2,5 @@ server.port=8888
 
 spring.application.name=config-server
 
-spring.cloud.config.server.git.uri=https://github.com/skovdev/socialnetwork/global-application.properties
+spring.cloud.config.server.git.uri=https://github.com/skovdev/socialnetwork
 spring.cloud.config.server.git.search-paths=configurations
