--- a/socialnetwork-auth-service/pom.xml
+++ b/socialnetwork-auth-service/pom.xml
@@ -22,6 +22,7 @@
         <spring.boot.version>2.3.3.RELEASE</spring.boot.version>
         <spring.boot.web.version>2.3.3.RELEASE</spring.boot.web.version>
         <spring.boot.security>2.3.3.RELEASE</spring.boot.security>
+        <spring.cloud.config.server.version>2.2.5.RELEASE</spring.cloud.config.server.version>
         <jackson.version>2.11.2</jackson.version>
         <jwt.version>0.9.1</jwt.version>
         <maven.compiler.source>14</maven.compiler.source>
@@ -44,6 +45,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
             <version>${spring.boot.security}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-config-server</artifactId>
+            <version>${spring.cloud.config.server.version}</version>
         </dependency>
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
