--- a/socialnetwork-config-server/src/main/resources/application.properties
+++ b/socialnetwork-config-server/src/main/resources/application.properties
@@ -1,6 +1,11 @@
-server.port=8888
-
 spring.application.name=config-server
 
-spring.cloud.config.server.git.uri=https://github.com/skovdev/socialnetwork.git
+server.port=8888
+
+spring.profiles.active=local
+
+spring.cloud.config.server.git.uri=https://github.com/skovdev/socialnetwork
 spring.cloud.config.server.git.search-paths=configurations
+spring.cloud.config.server.bootstrap=true
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
