Deleted unnecessary application's.properties. Added special properties for every service in cloud server. Added bootstrap's.properties for every service

--- a/configurations/auth-service-local.properties
+++ b/configurations/auth-service-local.properties
@@ -1,11 +1,16 @@
+# Application name
+
 spring.application.name=auth-service
+
+# Server port
 
 server.port=8080
 
 # Jwt Configuration
 
-security.jwt.token.secret-key = sn_socialnetwork
-security.jwt.token.expire-length = 3600000
+security.jwt.token.secret-key=sn_socialnetwork
+security.jwt.token.expire-length=3600000
 
+# Eureka Server
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
