--- a/socialnetwork-auth-service/pom.xml
+++ b/socialnetwork-auth-service/pom.xml
@@ -22,9 +22,9 @@
         <spring.boot.version>2.3.3.RELEASE</spring.boot.version>
         <spring.boot.web.version>2.3.3.RELEASE</spring.boot.web.version>
         <spring.boot.security>2.3.3.RELEASE</spring.boot.security>
-        <spring.cloud.config.server.version>2.2.5.RELEASE</spring.cloud.config.server.version>
-        <jackson.version>2.11.2</jackson.version>
+        <spring.cloud.config.starter.version>2.2.5.RELEASE</spring.cloud.config.starter.version>
         <jwt.version>0.9.1</jwt.version>
+        <jackson.version>2.11.2</jackson.version>
         <maven.compiler.source>14</maven.compiler.source>
         <maven.compiler.target>14</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -48,8 +48,8 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-config-server</artifactId>
-            <version>${spring.cloud.config.server.version}</version>
+            <artifactId>spring-cloud-starter-config</artifactId>
+            <version>${spring.cloud.config.starter.version}</version>
         </dependency>
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
