--- a/socialnetwork-profile-service/pom.xml
+++ b/socialnetwork-profile-service/pom.xml
@@ -22,6 +22,7 @@
         <spring.boot.version>2.3.3.RELEASE</spring.boot.version>
         <spring.boot.web.version>2.3.3.RELEASE</spring.boot.web.version>
         <spring.boot.data.jpa.version>2.3.3.RELEASE</spring.boot.data.jpa.version>
+        <spring.cloud.config.starter.version>2.2.5.RELEASE</spring.cloud.config.starter.version>
         <maven.compiler.source>14</maven.compiler.source>
         <maven.compiler.target>14</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -42,6 +43,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
             <version>${spring.boot.data.jpa.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-config</artifactId>
+            <version>${spring.cloud.config.starter.version}</version>
         </dependency>
     </dependencies>
 </project>
