--- a/socialnetwork-user-service/pom.xml
+++ b/socialnetwork-user-service/pom.xml
@@ -21,7 +21,7 @@
         <java.version>14</java.version>
         <spring.boot.version>2.3.3.RELEASE</spring.boot.version>
         <spring.boot.data.jpa.version>2.3.3.RELEASE</spring.boot.data.jpa.version>
-        <spring.cloud.config.server.version>2.2.5.RELEASE</spring.cloud.config.server.version>
+        <spring.cloud.config.starter.version>2.2.5.RELEASE</spring.cloud.config.starter.version>
         <jackson.version>2.11.3</jackson.version>
         <maven.compiler.source>14</maven.compiler.source>
         <maven.compiler.target>14</maven.compiler.target>
@@ -41,8 +41,8 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-config-server</artifactId>
-            <version>${spring.cloud.config.server.version}</version>
+            <artifactId>spring-cloud-starter-config</artifactId>
+            <version>${spring.cloud.config.starter.version}</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
