--- a/socialnetwork-config-server/pom.xml
+++ b/socialnetwork-config-server/pom.xml
@@ -7,15 +7,15 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-      <groupId>local.socialnetwork</groupId>
-      <artifactId>socialnetwork</artifactId>
-      <version>1.0</version>
+        <groupId>local.socialnetwork</groupId>
+        <artifactId>socialnetwork</artifactId>
+        <version>1.0</version>
     </parent>
 
     <groupId>local.socialnetwork.configserver</groupId>
     <artifactId>socialnetwork-config-server</artifactId>
     <version>1.0</version>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
 
     <properties>
         <java.version>14</java.version>
@@ -39,5 +39,25 @@
         </dependency>
 
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>2.3.5.RELEASE</version>
+                <configuration>
+                    <mainClass>local.socialnetwork.configserver.SpringBootRunConfigServer</mainClass>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
