--- a/socialnetwork-group-service/pom.xml
+++ b/socialnetwork-group-service/pom.xml
@@ -15,7 +15,7 @@
     <groupId>local.socialnetwork.groupservice</groupId>
     <artifactId>socialnetwork-group-service</artifactId>
     <version>1.0</version>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
 
     <properties>
         <java.version>14</java.version>
@@ -50,4 +50,24 @@
             <version>${spring.cloud.config.starter.version}</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>2.3.5.RELEASE</version>
+                <configuration>
+                    <mainClass>local.socialnetwork.groupservice.SpringBootRunGroupService</mainClass>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
