--- a/socialnetwork-config-server/src/main/resources/application.properties
+++ b/socialnetwork-config-server/src/main/resources/application.properties
@@ -4,6 +4,7 @@ server.port=8888
 
 spring.profiles.active=local
 
+spring.cloud.config.uri=http://localhost:8888
 spring.cloud.config.server.git.uri=https://github.com/skovdev/socialnetwork
 spring.cloud.config.server.git.search-paths=configurations
 spring.cloud.config.server.bootstrap=true
