Refactored properties of services in config server

--- a/configurations/auth-service-local.properties
+++ b/configurations/auth-service-local.properties
@@ -13,4 +13,4 @@ security.jwt.token.expire-length=3600000
 
 # Eureka Server
 
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.serviceUrl.defaultZone=http://socialnetwork-eureka-service-discovery:8761/eureka
