--- a/configurations/profile-service-local.properties
+++ b/configurations/profile-service-local.properties
@@ -14,13 +14,13 @@ spring.jpa.show-sql=true
 
 # PostgreSQL Configuration
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/sn_profile_service_db
+spring.datasource.url=jdbc:postgresql://localhost:5433/sn_profile_service_db
 spring.datasource.username=sn_profile_service_user
 spring.datasource.password=sn_profile_service_password
 
 # Spring Eureka Configuration
 
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.serviceUrl.defaultZone=http://socialnetwork-eureka-service-discovery:8761/eureka
 
 # Multipart File Size
 
