--- a/configurations/user-service-local.properties
+++ b/configurations/user-service-local.properties
@@ -20,7 +20,7 @@ spring.datasource.password=sn_user_service_password
 
 # Eureka Configuration
 
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.serviceUrl.defaultZone=http://socialnetwork-eureka-service-discovery:8761/eureka
 
 # Default avatar
 
