--- a/configurations/group-service-local.properties
+++ b/configurations/group-service-local.properties
@@ -14,13 +14,13 @@ spring.jpa.show-sql=true
 
 # PostgreSQL Configuration
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/sn_group_service_db
+spring.datasource.url=jdbc:postgresql://localhost:5434/sn_group_service_db
 spring.datasource.username=sn_group_service_user
 spring.datasource.password=sn_group_service_password
 
 # Eureka Server
 
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.serviceUrl.defaultZone=http://socialnetwork-eureka-service-discovery:8761/eureka
 
 # Default group avatar
 
