--- a/socialnetwork-api-gateway/src/main/resources/application.properties
+++ b/socialnetwork-api-gateway/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=api-gateway
 
 server.port=8762
 
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.client.serviceUrl.defaultZone=http://socialnetwork-eureka-service-discovery:8761/eureka
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=true
 
