--- a/socialnetwork-profile-service/src/main/resources/bootstrap.properties
+++ b/socialnetwork-profile-service/src/main/resources/bootstrap.properties
@@ -8,4 +8,4 @@ spring.profiles.active=local
 
 # Cloud Config URI
 
-spring.cloud.config.uri=http://localhost:8888
+spring.cloud.config.uri=http://socialnetwork-config-server:8888
