--- a/socialnetwork-config-server/src/main/resources/application.properties
+++ b/socialnetwork-config-server/src/main/resources/application.properties
@@ -9,4 +9,4 @@ spring.cloud.config.server.git.uri=https://github.com/skovdev/socialnetwork
 spring.cloud.config.server.git.search-paths=configurations
 spring.cloud.config.server.bootstrap=true
 
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.service-url.defaultZone=http://socialnetwork-eureka-service-discovery:8761/eureka/
