Changed data source url in user/profile/group services in config server

--- a/configurations/group-service-local.properties
+++ b/configurations/group-service-local.properties
@@ -14,7 +14,7 @@ spring.jpa.show-sql=true
 
 # PostgreSQL Configuration
 
-spring.datasource.url=jdbc:postgresql://localhost:5434/sn_group_service_db
+spring.datasource.url=jdbc:postgresql://socialnetwork-user-service-database:5432/sn_group_service_db
 spring.datasource.username=sn_group_service_user
 spring.datasource.password=sn_group_service_password
 
