--- a/configurations/user-service-local.properties
+++ b/configurations/user-service-local.properties
@@ -14,7 +14,7 @@ spring.jpa.show-sql=true
 
 # PostgreSQL Configuration
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/sn_user_service_db
+spring.datasource.url=jdbc:postgresql://socialnetwork-user-service-database:5432/sn_user_service_db
 spring.datasource.username=sn_user_service_user
 spring.datasource.password=sn_user_service_password
 
