Added local postgresql to docker and changed data source url in user/profile/group services in config server as well added docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,32 +1,10 @@
 version: '3.7'
 
 services:
-  socialnetwork-user-service-database:
-    image: postgres
-    environment:
-      POSTGERS_DB: sn_user_service_db
-      POSTGRES_USER: sn_user_service_user
-      POSTGRES_PASSWORD: sn_user_service_password
+  socialnetwork-database:
+    image: postgresql-local-socialnetwork
     ports:
       - "5432:5432"
-
-  socialnetwork-profile-service-database:
-    image: postgres
-    environment:
-      POSTGERS_DB: sn_profile_service_db
-      POSTGRES_USER: sn_profile_service_user
-      POSTGRES_PASSWORD: sn_profile_service_password
-    ports:
-      - "5433:5433"
-
-  socialnetwork-group-service-database:
-    image: postgres
-    environment:
-      POSTGERS_DB: sn_group_service_db
-      POSTGRES_USER: sn_group_service_user
-      POSTGRES_PASSWORD: sn_group_service_password
-    ports:
-      - "5434:5434"
 
   socialnetwork-config-server:
     image: socialnetwork-config-server-1.0
@@ -50,7 +28,7 @@ services:
   socialnetwork-auth-service:
     image: socialnetwork-auth-service-1.0
     environment:
-      SPRING_PROFILE_ACTIVE: local
+      - SPRING_PROFILE_ACTIVE=local
     ports:
       - "8080:8080"
     depends_on:
@@ -62,46 +40,55 @@ services:
   socialnetwork-user-service:
     image: socialnetwork-user-service-1.0
     environment:
-      SPRING_PROFILE_ACTIVE: local
+      - SPRING_PROFILE_ACTIVE=local
+      - SOCIALNETWORK_JDBC_URL=jdbc:postgresql://socialnetwork-database:5432/sn_user_service_db
+      - SOCIALNETWORK_JDBC_USER=sn_user_service_user
+      - SOCIALNETWORK_JDBC_PASSWORD=sn_user_service_password
     ports:
       - "8084:8084"
     depends_on:
       - socialnetwork-eureka-service-discovery
       - socialnetwork-config-server
       - socialnetwork-zuul-api-gateway
-      - socialnetwork-user-service-database
+      - socialnetwork-database
     entrypoint: ./wait-for-it.sh socialnetwork-config-server:8888 --timeout=15 -- java -jar socialnetwork-user-service-1.0.jar
 
   socialnetwork-profile-service:
     image: socialnetwork-profile-service-1.0
     environment:
       SPRING_PROFILE_ACTIVE: local
+        - SOCIALNETWORK_JDBC_URL=jdbc:postgresql://socialnetwork-database:5432/sn_profile_service_db
+        - SOCIALNETWORK_JDBC_USER=sn_profile_service_user
+        - SOCIALNETWORK_JDBC_PASSWORD=sn_profile_service_password
     ports:
       - "8081:8081"
     depends_on:
       - socialnetwork-eureka-service-discovery
       - socialnetwork-config-server
       - socialnetwork-zuul-api-gateway
-      - socialnetwork-profile-service-database
+      - socialnetwork-database
     entrypoint:  ./wait-for-it.sh socialnetwork-config-server:8888 --timeout=15 -- java -jar socialnetwork-profile-service-1.0.jar
 
   socialnetwork-group-service:
     image: socialnetwork-group-service-1.0
     environment:
-      SPRING_PROFILE_ACTIVE: local
+      - SPRING_PROFILE_ACTIVE=local
+      - SOCIALNETWORK_JDBC_URL=jdbc:postgresql://socialnetwork-database:5432/sn_user_service_db
+      - SOCIALNETWORK_JDBC_USER=sn_group_service_user
+      - SOCIALNETWORK_JDBC_PASSWORD=sn_group_service_password
     ports:
       - "8085:8085"
     depends_on:
       - socialnetwork-eureka-service-discovery
       - socialnetwork-config-server
       - socialnetwork-zuul-api-gateway
-      - socialnetwork-group-service-database
+      - socialnetwork-database
     entrypoint:  ./wait-for-it.sh socialnetwork-config-server:8888 --timeout=15 -- java -jar socialnetwork-group-service-1.0.jar
 
   socialnetwork-app-client:
     image: socialnetwork-app-client
     ports:
-    - "3000:3000"
+      - "3000:3000"
     volumes:
-    - /app/node_modules
-    - ./:/app
+      - /app/node_modules
+      - ./:/app
