--- a/configurations/api-gateway-local.properties
+++ b/configurations/api-gateway-local.properties
@@ -3,6 +3,7 @@ spring.application.name=api-gateway
 server.port=8762
 
 eureka.client.serviceUrl.defaultZone=http://socialnetwork-eureka-service-discovery:8761/eureka
+eureka.client.fetch-registry=true
 
 zuul.routes.authservice.path=/auth-service/**
 zuul.routes.authservice.service-id=auth-service
