--- a/socialnetwork-api-gateway/pom.xml
+++ b/socialnetwork-api-gateway/pom.xml
@@ -21,6 +21,7 @@
         <java.version>14</java.version>
         <spring.boot.version>2.3.3.RELEASE</spring.boot.version>
         <spring.cloud.zuul.version>2.2.5.RELEASE</spring.cloud.zuul.version>
+        <spring.cloud.starter.config.version>2.2.5.RELEASE</spring.cloud.starter.config.version>
         <jackson.version>2.11.2</jackson.version>
         <maven.compiler.source>14</maven.compiler.source>
         <maven.compiler.target>14</maven.compiler.target>
@@ -37,6 +38,11 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-zuul</artifactId>
             <version>${spring.cloud.zuul.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-config</artifactId>
+            <version>${spring.cloud.starter.config.version}</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
