Added kafka-server module

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>socialnetwork-group-service</module>
         <module>socialnetwork-unit-testing</module>
         <module>socialnetwork-integration-testing</module>
+        <module>socialnetwork-kafka-server</module>
     </modules>
 
     <properties>
