Deleted subfolder from path for uploading of avatar in profile-service-local.properties

--- a/configurations/profile-service-local.properties
+++ b/configurations/profile-service-local.properties
@@ -33,4 +33,4 @@ sn.profile.default.avatar.path=/avatar/default-avatar.jpg
 
 # Avatar folder
 
-sn.profile.upload.avatar.dir.path=/avatar/upload
+sn.profile.upload.avatar.dir.path=/avatar/
