Added kafka server in configs of services of user, profile and group

--- a/configurations/profile-service-local.properties
+++ b/configurations/profile-service-local.properties
@@ -18,9 +18,13 @@ spring.datasource.url=jdbc:postgresql://socialnetwork-database:5432/sn_profile_s
 spring.datasource.username=sn_profile_service_user
 spring.datasource.password=sn_profile_service_password
 
-# Spring Eureka Configuration
+# Eureka Server
 
 eureka.client.serviceUrl.defaultZone=http://socialnetwork-eureka-service-discovery:8761/eureka
+
+# Spring Kafka Configuration
+
+spring.kafka.server=kafka:9092
 
 # Multipart File Size
 
