--- a/configurations/user-service-local.properties
+++ b/configurations/user-service-local.properties
@@ -18,9 +18,13 @@ spring.datasource.url=jdbc:postgresql://socialnetwork-database:5432/sn_user_serv
 spring.datasource.username=sn_user_service_user
 spring.datasource.password=sn_user_service_password
 
-# Eureka Configuration
+# Eureka Server
 
 eureka.client.serviceUrl.defaultZone=http://socialnetwork-eureka-service-discovery:8761/eureka
+
+# Spring Kafka Configuration
+
+spring.kafka.server=kafka:9092
 
 # Default avatar
 
