Added socialnetwork-unit-testing module to docker-compose.yml and refactored Dockerfile of socialnetwork-unit-testing module

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -129,3 +129,15 @@ services:
     volumes:
       - /app/node_modules
       - ./:/app
+
+  socialnetwork-unit-testing:
+    image: socialnetwork-unit-testing-1.0
+    environment:
+      - SPRING_PROFILE_ACTIVE=local
+    ports:
+      - "8087:8087"
+      - "5009:5009"
+    depends_on:
+      - socialnetwork-user-service
+      - socialnetwork-profile-service
+      - socialnetwork-group-service
