Added volume for postgresql in docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
       - POSTGRES_PASSWORD=postgres
     ports:
       - "5432:5432"
+    volumes:
+      - ./pgdata:/var/lib/postgresql/data
 
   socialnetwork-eureka-service-discovery:
     image: socialnetwork-service-discovery-1.0
