Changed path from absolute to relative for default avatar of group in group service

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -118,6 +118,8 @@ services:
       - socialnetwork-database
       - kafka
     entrypoint: ./wait-for-it.sh socialnetwork-config-server:8888 --timeout=15 -- java -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5008 -jar socialnetwork-group-service-1.0.jar
+    volumes:
+      - /avatar/
 
   socialnetwork-app-client:
     image: socialnetwork-app-client
