Refactored properties in services of user, profile and group

--- a/configurations/user-service-local.properties
+++ b/configurations/user-service-local.properties
@@ -1,31 +1,30 @@
-# Application name
-
+# Spring: Application name
 spring.application.name=user-service
 
 # Server port
-
 server.port=8084
 
-# Hibernate Configuration
-
+# Spring: Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 
-# PostgreSQL Configuration
-
+# Spring: PostgreSQL Configuration
 spring.datasource.url=jdbc:postgresql://socialnetwork-database:5432/sn_user_service_db
 spring.datasource.username=sn_user_service_user
 spring.datasource.password=sn_user_service_password
 
 # Eureka Server
-
 eureka.client.serviceUrl.defaultZone=http://socialnetwork-eureka-service-discovery:8761/eureka
 
-# Spring Kafka Configuration
+# SocialNetwork: User
+sn.user.default.role=USER
 
-spring.kafka.server=kafka:9092
-
-# Default avatar
-
+# SocialNetwork: Profile
 sn.profile.default.avatar.path=/avatar/default-avatar.jpg
+
+# SocialNetwork: Kafka
+sn.kafka.server=kafka:9092
+sn.kafka.groupId=user-default-group-id
+sn.kafka.trustedPackages=*
+sn.kafka.topic.profile.new=topic.profile.new
