--- a/configurations/group-service-local.properties
+++ b/configurations/group-service-local.properties
@@ -1,31 +1,26 @@
-# Application name
-
+# Spring: Application name
 spring.application.name=group-service
 
 # Server port
-
 server.port=8085
 
-# Hibernate Configuration
-
+# Spring: Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 
-# PostgreSQL Configuration
-
+# Spring: PostgreSQL Configuration
 spring.datasource.url=jdbc:postgresql://socialnetwork-database:5432/sn_group_service_db
 spring.datasource.username=sn_group_service_user
 spring.datasource.password=sn_group_service_password
 
 # Eureka Server
-
 eureka.client.serviceUrl.defaultZone=http://socialnetwork-eureka-service-discovery:8761/eureka
 
-# Spring Kafka Configuration
-
-spring.kafka.server=kafka:9092
-
-# Default group avatar
-
+# SocialNetwork: Group
 sn.group.default.avatar.path=/avatar/default-group-avatar.jpg
+
+# SocialNetwork: Kafka
+sn.kafka.server=kafka:9092
+sn.kafka.groupId=group-default-group-id
+sn.kafka.trustedPackages=*
