Fixed kafka topic for relationship of user and group in group service

--- a/configurations/group-service-local.properties
+++ b/configurations/group-service-local.properties
@@ -24,4 +24,4 @@ sn.group.default.avatar.path=/avatar/default-group-avatar.jpg
 sn.kafka.server=kafka:9092
 sn.kafka.groupId=group-default-group-id
 sn.kafka.trustedPackages=*
-sn.kafka.topic.group.relationship.user.id=group.relationship.user.id
+sn.kafka.topic.group.relationship.user=group.relationship.user
