Added spring-boot-maven-plugin in support service

--- a/socialnetwork-support-service/pom.xml
+++ b/socialnetwork-support-service/pom.xml
@@ -89,6 +89,21 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>2.3.5.RELEASE</version>
+                <configuration>
+                    <mainClass>local.socialnetwork.supportservice.SpringBootRunSupportService</mainClass>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 
