--- a/socialnetwork-api-gateway/src/main/resources/bootstrap.properties
+++ b/socialnetwork-api-gateway/src/main/resources/bootstrap.properties
@@ -4,7 +4,7 @@ spring.application.name=api-gateway
 
 # Profile
 
-spring.profiles.active=native
+spring.profiles.active=local
 
 # Cloud Config URI
 
