--- a/socialnetwork-auth-service/src/main/resources/bootstrap.properties
+++ b/socialnetwork-auth-service/src/main/resources/bootstrap.properties
@@ -4,7 +4,7 @@ spring.application.name=auth-service
 
 # Profile
 
-spring.profiles.active=native
+spring.profiles.active=local
 
 # Cloud Config URI
 
